# pragma-ffm

./: .gitignore  BLOG_OUTLINE.md  ELLIPTIC.md  EXPERIMENTS.md  EXPERIMENTS_IEEE.md  README.md  RELATIONAL_PRAGMA.md  SYNTH_RELATIONAL.md  TALKINGDATA.md  pyproject.toml
artifacts/: amazon_results.json  baseline_lgbm.json  elliptic_results.json  eval_lightgbm_swasof.json  eval_mini_bucket_dt_asof.json  eval_mini_bucket_dt_swasof.json  eval_nano_bucket_asof.json  eval_nano_bucket_dt_L128_asof.json  eval_nano_bucket_dt_L16_asof.json  eval_nano_bucket_dt_L256_asof.json  eval_nano_bucket_dt_L32_asof.json  eval_nano_bucket_dt_L4_asof.json  eval_nano_bucket_dt_L64_asof.json  eval_nano_bucket_dt_L8_asof.json  eval_nano_bucket_dt_asof.json  eval_nano_bucket_dt_posindex_s0_asof.json  eval_nano_bucket_dt_posindex_s1_asof.json  eval_nano_bucket_dt_posindex_s2_asof.json  eval_nano_bucket_dt_posnone_s0_asof.json  eval_nano_bucket_dt_posnone_s1_asof.json  eval_nano_bucket_dt_posnone_s2_asof.json  eval_nano_bucket_dt_postime_s0_asof.json  eval_nano_bucket_dt_postime_s1_asof.json  eval_nano_bucket_dt_postime_s2_asof.json  eval_nano_bucket_dt_swasof.json  eval_nano_periodic_asof.json  eval_nano_ple_asof.json  eval_small_bucket_6k_nodt_asof.json  eval_small_bucket_6k_nodt_swasof.json  eval_small_bucket_dt_6k_L256_swasof.json  eval_small_bucket_dt_6k_L256_w128_swasof.json  eval_small_bucket_dt_6k_L256_w64_swasof.json  eval_small_bucket_dt_6k_L64_asof.json  eval_small_bucket_dt_6k_L64_swasof.json  eval_small_bucket_dt_6k_asof.json  eval_small_bucket_dt_6k_nofe_swasof.json  (+66 more)
paper/: VENUES.md  (+1 more)
(+105 files in other folders)
